# faceit-backend

./: .env.example  .gitignore  Makefile  Procfile  README.md  pyproject.toml  requirements.txt  requirments.txt
apps/api/auth/: admin.py  models.py
apps/api/auth/v1/serializers/: __init__.py  user_details.py
apps/api/stats/: __init__.py  admin.py  apps.py  signals.py  urls.py
apps/api/stats/management/commands/: updatestats.py
apps/api/stats/migrations/: 0001_initial.py  0002_auto_20220613_0215.py  0003_remove_csgostats_name.py  0004_remove_player_stats.py  0005_auto_20220613_0313.py  0006_auto_20220613_0318.py  0007_alter_csgostats_player.py  0008_auto_20220613_0322.py  0009_dota2stats.py  0010_player_faceit_id.py
apps/api/stats/models/: __init__.py  csgo_stats.py  dota2_stats.py  faculty.py  group.py  player.py
apps/api/stats/utils/: __init__.py  faceit_api.py
apps/api/stats/v1/: routers.py  serializers.py  views.py
apps/core/api/: urls.py  views.py
apps/core/api/v1/: urls.py
apps/core/main/: urls.py
apps/core/utils/: admin.py  forms.py  views.py
apps/core/utils/management/commands/: clear.py
config/settings/: __init__.py  custom.py
config/settings/base/: apps.py  environment.py  middlewares.py
config/settings/components/: paths.py  rest_framework.py  static.py
config/settings/environments/: common.py
fixtures/: stats.json
private/: .gitignore
templates/: 400.html  403.html  403_csrf.html  404.html  500.html  base.html  index.html
